--- a/admin/index.html
+++ b/admin/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comma</title>
 </head>
 <body>
-    
+    <h1>Comma</h1>
+    <a href="./editor/"><button>Editor</button></a>
 </body>
 </html>
