--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Comma</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <a href="./editor/"><button>Editor</button></a>
 </body>
 </html>
