update index.html and main.js

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
     <main>
         <p data-font="Inspiration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatem enim id rerum nemo et eveniet!
             Vitae pariatur tempore qui! Repudiandae aperiam earum qui eum expedita iste inventore velit facilis.</p>
+        <div id="loadHere"></div>
     </main>
 
     <footer>
     </footer>
     
 </body>
+
+<script>
+    load("loadHere", "nav.html")
+</script>
 
 </html>
