--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta charset="utf-8">
 </head>
 
-<script src="main.js"></script>
-<script src="../library/fonts/fonts.js"></script>
-<script>
-    font('Inspiration')
-</script>
-
 <body>
     <nav>
     </nav>
     <main>
-        <p data-font="Inspiration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatem enim id rerum nemo et eveniet!
+        <p data-font="Inspiration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatem enim
+            id rerum nemo et eveniet!
             Vitae pariatur tempore qui! Repudiandae aperiam earum qui eum expedita iste inventore velit facilis.</p>
         <div id="loadHere"></div>
     </main>
 
     <footer>
     </footer>
-    
+
 </body>
 
+<script src="main.js"></script>
+<script src="../library/fonts/fonts.js"></script>
+<script>
+    font('Inspiration')
+</script>
 <script>
     load("loadHere", "nav.html")
 </script>
