--- a/admin/playground/mention.html
+++ b/admin/playground/mention.html
@@ -39,6 +39,8 @@
         .menu {
             background-color: #f3f3f3;
             position: absolute;
+            border-radius: 5px;
+            border: black solid 1px;
         }
 
         .menu-item {
