--- a/admin/playground/mention.html
+++ b/admin/playground/mention.html
@@ -48,6 +48,14 @@
             padding: 1rem;
         }
 
+        .menu-item:first-child {
+            border-radius: 5px 5px 0px 0px;
+        }
+
+        .menu-item:last-child {
+            border-radius: 0px 0px 5px 5px;
+        }
+
         .menu-item.selected {
             background-color: slateGray;
             color: white;
