--- a/admin/playground/index.html
+++ b/admin/playground/index.html
@@ -13,7 +13,7 @@
             box-sizing: border-box;
         }
 
-        p{
+        p {
             color: white;
         }
 
@@ -49,8 +49,14 @@
 
 <body>
     <div id="rect"></div>
-    <span class="result" style="color: #fff">0%</span>
+    <span id="output-borderRadius" style="color: #fff">0%</span>
     <input class="input" type="range" min="0" max="50" value="0">
-    <p id="dimensions"></p>
+    <p id="output-dimensions"></p>
+    <section class="parent">
+        <h3>Random Hex Generator</h3>
+        <span class="result">#ffffff</span>
+        <button class="btn">Random Color</button>
+    </section>
+
     <script src="./script.js"></script>
 </body>
