--- a/admin/login.html
+++ b/admin/login.html
@@ -5,19 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 
 <body>
-    <input type="text" id="input" onkeyup="test()">
+    <input type="text" id="input">
     <p id="result"></p>
     <script>
-    let input = document.getElementById('input');
-    let result = document.getElementById('result');
-    let regex = /[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+/;
-    function test() {
-        result.innerHTML = regex.test(input.value);
-    }
+        let input = document.getElementById('input');
+        let result = document.getElementById('result');
+
+        const regex = {
+            email: /[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+/,
+        }
+
+        function test() {
+            result.innerHTML = regex.email.test(input.value);
+        }
+
+        input.addEventListener('keyup', test);
     </script>
 </body>
 
