--- a/admin/login.html
+++ b/admin/login.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-    <input type="email" data-login="email" placeholder="E-mail adress">
-    <input type="password" data-login="password" id="password" placeholder="Password">
-    <input type="submit" value="Log in">
-    <p id="result"></p>
-    <input type="checkbox" id="togglePassword"><br>
-    <p>By signing up you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
+    <main>
+        <input type="email" data-login="email" placeholder="E-mail adress">
+        <input type="password" data-login="password" id="password" placeholder="Password">
+        <input type="submit" value="Log in">
+        <p id="result"></p>
+        <input type="checkbox" id="togglePassword"><br>
+        <p>By signing up you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
+    </main>
     <script>
         let email = document.querySelectorAll("[data-login='email']")[0];
         let result = document.getElementById('result');
