--- a/admin/login.html
+++ b/admin/login.html
@@ -11,10 +11,10 @@
 
 <body>
     <main>
-        <input type="email" data-login="email" placeholder="E-mail adress">
-        <input type="password" data-login="password" id="password" placeholder="Password">
-        <input type="submit" value="Log in">
+        <input type="email" data-login="email" placeholder="E-mail address">
         <p id="result"></p>
+        <input type="password" data-login="password" id="password" placeholder="Password">
+        <input type="submit" value="Sign up">
         <input type="checkbox" id="togglePassword"><br>
         <p>By signing up you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
     </main>
