update admin/login/index.html, script.js, style.css and style.scss

--- a/admin/login/index.html
+++ b/admin/login/index.html
@@ -15,7 +15,7 @@
         <p id="result"></p>
         <div>
             <input type="password" data-login="password" id="password" placeholder="Password">
-            <span class="material-symbols-outlined" id="togglePassword">
+            <span class="material-symbols-outlined" data-login="toggle">
                 visibility
             </span>
         </div>
