--- a/admin/index.html
+++ b/admin/index.html
@@ -17,13 +17,14 @@
         </div>
     </main>
     <div id="search" style="display: none;">
-        <input type="text" id="myInput" data-search="input" onkeyup="myFunction()" placeholder="Search for names..">
+        <input type="text" id="myInput" data-search="input" placeholder="Search">
         <div data-search="results">
+            <a href="#"><span class="material-symbols-outlined">home</span><p>View home page</p></a>
             <a href="#"><span class="material-symbols-outlined">post_add</span><p>Create a new post</p></a>
-            <a href="#"><span class="material-symbols-outlined">post_add</span><p>bices</p></a>
-            <a href="#"><span class="material-symbols-outlined">post_add</span><p>pax</p></a>
+            <a href="#"><span class="material-symbols-outlined">manage_accounts</span><p>Manage accounts</p></a>
         </div>
     </div>
+    <div id="searchBG"></div>
     <script src="./script.js"></script>
 </body>
 
