update admin/index.html, style.css and style.scss

--- a/admin/index.html
+++ b/admin/index.html
@@ -11,13 +11,14 @@
 
 <body>
     <main>
+        <h1>UI Testing</h1>
         <div class="container">
             <textarea id="textarea" placeholder="@mention someone"></textarea>
             <div id="menu" class="menu" role="listbox"></div>
         </div>
     </main>
     <div id="search" style="display: none;">
-        <input type="text" id="myInput" data-search="input" placeholder="Search">
+        <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
         <div data-search="results">
             <a href="#"><span class="material-symbols-outlined">home</span><p>View home page</p></a>
             <a href="#"><span class="material-symbols-outlined">post_add</span><p>Create a new post</p></a>
