update admin/index.html, script.js, style.css and style.scss

--- a/admin/index.html
+++ b/admin/index.html
@@ -25,7 +25,7 @@
             <a href="#"><span class="material-symbols-outlined">manage_accounts</span><p>Manage accounts</p></a>
         </div>
     </div>
-    <div id="searchBG"></div>
+    <div id="searchBG" data-comma="spotlight"></div>
     <script src="./script.js"></script>
 </body>
 
