--- a/admin/index.html
+++ b/admin/index.html
@@ -16,13 +16,20 @@
             <textarea id="textarea" placeholder="@mention someone"></textarea>
             <div id="menu" class="menu" role="listbox"></div>
         </div>
+        <p>Try to press <span class="key">Ctrl</span>+<span class="key">K</span> to open search.</p>
     </main>
     <div id="search" style="display: none;">
         <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
         <div data-search="results">
-            <a href="#"><span class="material-symbols-outlined">home</span><p>View home page</p></a>
-            <a href="#"><span class="material-symbols-outlined">post_add</span><p>Create a new post</p></a>
-            <a href="#"><span class="material-symbols-outlined">manage_accounts</span><p>Manage accounts</p></a>
+            <a href="#"><span class="material-symbols-outlined">home</span>
+                <p>View home page</p>
+            </a>
+            <a href="#"><span class="material-symbols-outlined">post_add</span>
+                <p>Create a new post</p>
+            </a>
+            <a href="#"><span class="material-symbols-outlined">manage_accounts</span>
+                <p>Manage accounts</p>
+            </a>
         </div>
     </div>
     <div id="searchBG" data-comma="spotlight"></div>
