--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,7 @@
             <textarea id="textarea" placeholder="@mention someone"></textarea>
             <div id="menu" class="menu" role="listbox"></div>
         </div>
-        <p>Try to press <span class="key">Ctrl</span> + <span class="key">K</span> to open search.</p>
+        <p id="keys">Try to press&nbsp;<kbd>Ctrl</kbd>&nbsp;+&nbsp;<kbd>K</kbd>&nbsp;to open search.</p>
     </main>
     <div id="search" style="display: none;">
         <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
