--- a/admin/index.html
+++ b/admin/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <main>
-        <h1>UI Testing</h1>
+        <h1>Testing</h1>
         <div class="container">
             <textarea id="textarea" placeholder="@mention someone"></textarea>
             <div id="menu" class="menu" role="listbox"></div>
         </div>
-        <p>Try to press <span class="key">Ctrl</span> + <span class="key">K</span> to open search.</p>
+        <p>Press <span class="key">Ctrl</span> + <span class="key">K</span> to open search.</p>
     </main>
     <div id="search" style="display: none;">
         <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
@@ -32,7 +32,7 @@
             </a>
         </div>
     </div>
-    <div id="searchBG" data-comma="spotlight"></div>
+    <div data-comma="spotlight"></div>
     <script src="./script.js"></script>
 </body>
 
