update admin/index.html, script.js, style.css and style.scss

--- a/admin/index.html
+++ b/admin/index.html
@@ -32,7 +32,7 @@
             </a>
         </div>
     </div>
-    <div data-comma="spotlight"></div>
+    <div data-comma="spotlight" style="display: none;"></div>
     <script src="./script.js"></script>
 </body>
 
