--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,7 @@
             <textarea id="textarea" placeholder="@mention someone"></textarea>
             <div id="menu" class="menu" role="listbox"></div>
         </div>
-        <p>Try to press <kbd>Ctrl</kbd> + <kbd>K</kbd> to open search.</p>
+        <p>Press <kbd>Ctrl</kbd> + <kbd>K</kbd> to open search.</p>
     </main>
     <div id="search" style="display: none;">
         <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
