update admin/index.html, script.js, style.css and style.scss

--- a/admin/index.html
+++ b/admin/index.html
@@ -18,7 +18,7 @@
         </div>
         <p>Press <kbd>Ctrl</kbd> + <kbd>K</kbd> to open search.</p>
     </main>
-    <div id="search" style="display: none;">
+    <div data-search="element" id="search" style="display: none;">
         <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
         <div data-search="results">
             <a href="#"><span class="material-symbols-outlined">home</span>
