--- a/admin/index.html
+++ b/admin/index.html
@@ -18,7 +18,7 @@
         </div>
         <p>Press <kbd>Ctrl</kbd> + <kbd>K</kbd> to open search.</p>
         <button id="bold">B</button>
-        <div contenteditable="true" id="editor">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque cumque magnam soluta fuga quisquam. Dicta dolorum eaque accusantium praesentium reprehenderit voluptatem dignissimos, natus aperiam quisquam placeat rerum fuga rem tempora?</div>
+        <div contenteditable="true" id="editor">Lorem ipsum dolor</div>
     </main>
     <div data-search="element" id="search" style="display: none;">
         <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
