update admin/index.html and script.js

--- a/admin/index.html
+++ b/admin/index.html
@@ -20,7 +20,7 @@
         <p>Press <kbd>Ctrl</kbd> + <kbd>K</kbd> to open search.</p>
         <button id="bold">B</button>
         <div contenteditable="true" id="editor">Lorem ipsum dolor</div>
-        <p>Press <kbd>Ctrl</kbd> + <kbd>B</kbd> for bold text, <kbd>Ctlr</kbd> + <kbd>I</kbd> for italic.</p>
+        <p>Press <kbd>Ctrl</kbd> + <kbd>B</kbd> for bold text and <kbd>Ctlr</kbd> + <kbd>I</kbd> for italic.</p>
     </main>
     <div data-search="element" id="search" style="display: none;">
         <input type="text" id="myInput" data-search="input" placeholder="Search or type '/' for commands">
