--- a/admin/index.html
+++ b/admin/index.html
@@ -22,7 +22,7 @@
         <div class="toolbar">
             <button id="bold"><strong>B</strong></button>
         </div>
-        <div contenteditable="true" id="editor" onkeyup="editor.output()">Lorem ipsum dolor</div>
+        <div contenteditable="true" id="editor" onkeyup="editor.output()" style="display: inline-block;">Lorem ipsum dolor</div>
         <p>Press <kbd>Ctrl</kbd> + <kbd>B</kbd> for bold text and <kbd>Ctlr</kbd> + <kbd>I</kbd> for italic.</p>
         <p id="text"></p>
     </main>
