--- a/admin/index.html
+++ b/admin/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comma</title>
+    <title>UI Tests</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <main>
-        <h1>Testing</h1>
+        <h1>UI Tests</h1>
         <div class="container">
             <textarea id="textarea" placeholder="@mention someone"></textarea>
             <div id="menu" class="menu" role="listbox"></div>
