--- a/design/index.html
+++ b/design/index.html
@@ -54,8 +54,8 @@
     <p id="output-dimensions"></p>
     <section class="parent">
         <h3>Random Hex Generator</h3>
-        <span class="result">#ffffff</span>
-        <button class="btn">Random Color</button>
+        <span labels="color" style="color: white">#ffffff</span>
+        <button class="btn" onclick="design.color.random()">Random Color</button>
     </section>
 
     <script src="./script.js"></script>
