--- a/design/index.html
+++ b/design/index.html
@@ -51,7 +51,7 @@
     <div id="rect"></div>
     <span id="output-borderRadius" style="color: #fff">0%</span>
     <input class="input" type="range" min="0" max="50" value="0">
-    <p id="output-dimensions"></p>
+    <p labels="dimensions"></p>
     <section class="parent">
         <h3>Random Hex Generator</h3>
         <span labels="color" style="color: white">#ffffff</span>
