--- a/invoice/index.html
+++ b/invoice/index.html
@@ -54,8 +54,8 @@
                     <p data-invoice="heading"></p>
                     <h1 data-invoice="number">Faktura ČÍSLO FAKTURY</h1>
                 </div>
-                <div class="column30" style="display: flex; justify-content: flex-end;">
-                    <svg width="70" height="50" viewBox="0 0 74 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <div class="column30" style="display: none; justify-content: flex-end;">
+                    <svg width="40" height="30" viewBox="0 0 74 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M37 0L74 60H0L37 0Z" fill="#4F54FF" />
                     </svg>
                 </div>
