--- a/invoice/index.html
+++ b/invoice/index.html
@@ -49,14 +49,12 @@
     <main>
         <div id="invoice">
             <div class="row">
-                <div class="column70">
-                    <p data-invoice="heading"></p>
-                    <h1 data-invoice="number">Faktura ČÍSLO FAKTURY</h1>
-                </div>
-                <div class="column30" style="display: none; justify-content: flex-end;">
-                    <svg width="40" height="30" viewBox="0 0 74 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <div class="column70" style="display: inline-flex">
+                    <p style="display: none;" data-invoice="heading"></p>
+                    <svg width="30" height="30" viewBox="0 0 74 60" fill="none" style="margin-right: 10px; margin-top: 3.5px" xmlns="http://www.w3.org/2000/svg">
                         <path d="M37 0L74 60H0L37 0Z" fill="#4F54FF" />
                     </svg>
+                    <h1 data-invoice="number">Faktura ČÍSLO FAKTURY</h1>
                 </div>
             </div>
             <div class="line"></div>
