--- a/sklonobot/index.html
+++ b/sklonobot/index.html
@@ -1,5 +1,5 @@
 <input type="text" id="name">
-<button onclick="doshit()">Pičo</button>
+<button onclick="doshit()">Skloňovat</button>
 <h1>Ještě jeden krok, <span id="result"></span></h1>
 <p>Dokončete váš účet tím, že kliknete na odkaz v e-mailu.</p>
 
